--- a/locales/vi.json
+++ b/locales/vi.json
@@ -341,40 +341,65 @@
   "enterTitle": "Nhập tiêu đề tài liệu",
   "enterContent": "Nhập nội dung tài liệu...",
   "appName": "DuHan",
+  "coursesOverview": {
+    "backToHome": "Back to Home",
+    "navTitle": "Premium Benefits & Features",
+    "activatePremium": "Unlock Premium"
+  },
+  "dashboard": {
+    "banner": {
+      "upgradeTitle": "Upgrade to Premium",
+      "upgradeDesc": "You are currently on the <1>Free Tier</1>, with limited access to courses.",
+      "unlockDesc": "Upgrade to unlock all 100+ units and TOPIK exams.",
+      "viewBenefits": "View Benefits",
+      "decorationTitle": "Upgrade to Premium",
+      "decorationDesc": "Upgrade to unlock full curriculum & TOPIK exams"
+    },
+    "greeting": {
+      "morning": "Good morning",
+      "afternoon": "Good afternoon",
+      "evening": "Good evening",
+      "goalPart1": "You are one step away from your goal",
+      "goalPart2": "TOPIK 6",
+      "goalPart3": "Keep it up!"
+    },
+    "common": {
+      "streak": "Streak Challenge",
+      "days": "{{count}} days",
+      "continueLearning": "Continue Learning",
+      "lastStudied": "Last Studied",
+      "noCourse": "No textbook started yet. Pick one from \"Curriculum\"!",
+      "weeklyStudyTime": "Weekly Study Time (min)",
+      "dailyGoal": "Daily Goals",
+      "viewAllPlans": "View All Plans",
+      "comingUp": "Coming Up",
+      "daysLeft": "days left",
+      "examDate": "Exam Date: {{date}}",
+      "makePlan": "Make a Plan",
+      "goalWords": "Learn {{target}} new words",
+      "goalReadings": "Read {{target}} exam articles",
+      "goalListenings": "Listen to {{target}} items",
+      "settings": {
+        "title": "Set Daily Goals",
+        "words": "Daily Words",
+        "readings": "Daily Readings",
+        "listenings": "Daily Listenings",
+        "cancel": "Cancel",
+        "save": "Save"
+      }
+    },
+    "tools": {
+      "topik_mock": "TOPIK Mock",
+      "mock_desc": "Real Simulation",
+      "flashcards": "Flashcards",
+      "flashcards_desc": "Smart Review",
+      "listening": "Listening",
+      "listening_desc": "Anytime Anywhere",
+      "mistakes": "Mistake Book",
+      "mistakes_desc": "Review Weakness"
+    }
+  },
   "landing": {
-    "heroBadge": "Cập nhật giáo trình Yonsei, Sogang, SNU",
-    "heroTitle1": "Mang trường ngữ học Hàn Quốc",
-    "heroTitle2": "vào túi của bạn",
-    "heroDesc": "Dù bạn đang chuẩn bị du học hay tự học. DuHan giúp bạn tiếp cận chương trình đại học Hàn Quốc mọi lúc mọi nơi.",
-    "startTrial": "Học thử miễn phí",
-    "viewCourses": "Xem chương trình",
-    "statTextbooks": "Giáo trình TOP",
-    "statPassRate": "Tỷ lệ đậu TOPIK 6",
-    "statRecommend": "Học viên đề xuất",
-    "featureEyebrow": "Trợ lý học tập",
-    "featureTitle": "Không chỉ là sách, đây là gia sư AI của bạn",
-    "card1Title": "Giáo trình Đại học",
-    "card1Desc": "Số hóa giáo trình từ Yonsei, Sogang... Giúp bạn theo sát chương trình học chính thống ngay tại nhà.",
-    "card2Title": "Chinh phục TOPIK",
-    "card2Desc": "Thi thử đề thật và phân tích lỗi sai thông minh. Giúp bạn đạt cấp 6 và học bổng dễ dàng.",
-    "card2List": [
-      "Thi thử như thật",
-      "Chấm điểm tự động",
-      "Tiêu chuẩn học bổng",
-      "Kho đề thi cũ"
-    ],
-    "card3Title": "Luyện nghe Bản xứ",
-    "card3Desc": "Âm thanh gốc từ lớp học ngữ học, hỗ trợ nghe từng câu và chỉnh tốc độ.",
-    "card4Title": "Quản lý Tiến độ",
-    "card4Desc": "Tự động ghi lại lộ trình học, lên kế hoạch ôn tập hiệu quả.",
-    "stepTitle": "3 Bước để Giỏi tiếng Hàn",
-    "step1Title": "Chọn Giáo trình",
-    "step1Desc": "Chọn Yonsei, Sogang... tùy theo mục tiêu hoặc trường học của bạn.",
-    "step2Title": "Luyện tập & Đồng bộ",
-    "step2Desc": "Xem trước từ vựng, củng cố ngữ pháp với sự hỗ trợ của AI.",
-    "step3Title": "Tự tin lên lớp",
-    "step3Desc": "Không còn nỗi lo nghe không hiểu, tự tin tham gia lớp học.",
-    "ctaTitle": "Sẵn sàng cho hành trình du học/tự học?",
     "ctaDesc": "DuHan đồng hành cùng bạn từ bảng chữ cái đến khi thành thạo. Tham gia ngay!",
     "ctaBtn": "Tạo tài khoản miễn phí",
     "ctaNote": "Không cần thẻ tín dụng · Gói miễn phí vĩnh viễn",
