--- a/locales/zh.json
+++ b/locales/zh.json
@@ -30,7 +30,11 @@
   "learningHours": "学习时长",
   "pricing": {
     "title": "投资您的韩语流利度",
-    "subtitle": "选择适合您节奏的计划。"
+    "subtitle": "选择适合您节奏的计划。",
+    "limitedOffer": "限时优惠",
+    "paymentMethods": "支持微信支付、支付宝及国际信用卡。",
+    "notSure": "不确定是否适合您？",
+    "trial": "先注册免费试用"
   },
   "plan": {
     "monthly": "月度会员",
@@ -341,41 +345,103 @@
   "enterTitle": "输入文档标题",
   "enterContent": "输入文档内容...",
   "appName": "读韩",
+  "coursesOverview": {
+    "backToHome": "返回首页",
+    "navTitle": "会员权益与功能详解",
+    "activatePremium": "开启高级会员",
+    "enhanceExperience": "升级您的韩语学习体验",
+    "unlockTitle": "解锁 <1>读韩 Premium</1>",
+    "achieveGoal": "以最快速度通过 TOPIK 6 级",
+    "freeVsPremiumDesc": "免费版仅提供基础体验。升级 Premium，您将获得无限的教材访问权限、全真 TOPIK 题库以及专业的语法深度解析功能。",
+    "benefitComparison": "权益对比",
+    "seeDifference": "看看 Premium 会员为您带来的不同",
+    "featurePrivilege": "功能特权",
+    "textbookAccess": "大学教材访问",
+    "topikAccess": "TOPIK 真题库",
+    "listeningAccess": "听力逐句精听",
+    "grammarAccess": "语法/长难句解析",
+    "vocabAccess": "生词本容量",
+    "offlineAccess": "离线下载",
+    "adFree": "去广告",
+    "limited3Lessons": "仅前 3 课",
+    "fullAccess1to6": "全套教材 (1-6级)",
+    "limitedRecent": "仅最近 1 届",
+    "allPastExams": "历年所有真题 (35+套)",
+    "limited": "受限",
+    "unlimited": "无限使用",
+    "daily3Times": "每日 3 次",
+    "unlimitedTimes": "无限次",
+    "vocab50": "50 个单词",
+    "vocabUnlimited": "无限容量",
+    "feature1Title": "名校教材库无限制畅学",
+    "feature1Desc": "<1>Premium 会员</1> 可解锁所有合作院校（延世、西江、首尔大等）的完整电子教材。从初级语法到高级阅读，内容实时更新，无需额外购买纸质书。",
+    "feature1List1": "覆盖 1-6 级全阶段课程",
+    "feature1List2": "包含课文、单词、语法、练习题",
+    "feature1List3": "支持一键生词提取与笔记",
+    "feature2Title": "TOPIK 历年真题无限刷",
+    "feature2Desc": "告别 PDF 打印。Premium 会员可访问过去 10 年的所有 TOPIK I & II 真题。系统自动评分、分析薄弱项，并提供详细的题目解析。",
+    "feature2List1": "还原真实机考 (IBT) 界面",
+    "feature2List2": "听力音频自动分段播放",
+    "feature2List3": "智能错题归纳与分析报告",
+    "feature3Title": "深度语法与长难句解析",
+    "feature3Desc": "遇到读不懂的句子？<1 />我们内置了详尽的语法库和句型分析系统。<2 />一键查看句子结构拆解与对应语法点，让自学不再有盲点。",
+    "booksDigitized": "100+ 数字化教材",
+    "examPapers": "35+ 套真题试卷"
+  },
+  "dashboard": {
+    "banner": {
+      "upgradeTitle": "升级到 Premium 会员",
+      "upgradeDesc": "您当前使用的是<1>免费版</1>，仅可访问部分基础课程。",
+      "unlockDesc": "升级后解锁全部 100+ 单元教材与 TOPIK 真题库。",
+      "viewBenefits": "查看会员权益",
+      "decorationTitle": "升级会员，解锁完整课程体系与真题库",
+      "decorationDesc": "Upgrade to unlock full curriculum & TOPIK exams"
+    },
+    "greeting": {
+      "morning": "早安",
+      "afternoon": "下午好",
+      "evening": "晚上好",
+      "goalPart1": "距离你的目标",
+      "goalPart2": "TOPIK 6 级",
+      "goalPart3": "还差一步，今天也要加油！"
+    },
+    "common": {
+      "streak": "连胜挑战",
+      "days": "{{count}} 天",
+      "continueLearning": "继续学习",
+      "lastStudied": "上次学到",
+      "noCourse": "还没有开始学习的教材，去\"课程\"里挑一本吧！",
+      "weeklyStudyTime": "本周学习时长 (分钟)",
+      "dailyGoal": "今日目标",
+      "viewAllPlans": "查看全部计划",
+      "comingUp": "Coming Up",
+      "daysLeft": "天后考试",
+      "examDate": "考试日期: {{date}}",
+      "makePlan": "制定复习计划",
+      "goalWords": "完成 {{target}} 个新单词",
+      "goalReadings": "阅读 {{target}} 篇真题文章",
+      "goalListenings": "听力练习 {{target}} 篇",
+      "settings": {
+        "title": "设置每日目标",
+        "words": "每日单词数量",
+        "readings": "每日阅读篇数",
+        "listenings": "每日听力篇数",
+        "cancel": "取消",
+        "save": "保存"
+      }
+    },
+    "tools": {
+      "topik_mock": "TOPIK 模考",
+      "mock_desc": "全真模拟",
+      "flashcards": "单词闪卡",
+      "flashcards_desc": "智能复习",
+      "listening": "听力磨耳朵",
+      "listening_desc": "随时随地",
+      "mistakes": "错题本",
+      "mistakes_desc": "查漏补缺"
+    }
+  },
   "landing": {
-    "heroBadge": "延世·西江·首尔大 教材库同步更新中",
-    "heroTitle1": "把韩国名校语学院",
-    "heroTitle2": "装进口袋里",
-    "heroDesc": "无论你是正在备战留学的自学者，还是需要课后巩固的在校生。读韩 (DuHan) 助你无缝衔接语学院课程，轻松应对全韩语教学环境。",
-    "startTrial": "免费试学教材",
-    "viewCourses": "了解课程体系",
-    "statTextbooks": "名校教材收录",
-    "statPassRate": "6级通过率",
-    "statRecommend": "学员推荐",
-    "featureEyebrow": "学习助力",
-    "featureTitle": "不仅是教材，更是你的智能助教",
-    "card1Title": "名校语学院同步课程",
-    "card1Desc": "从延世大学的严谨语法体系，到西江大学的口语强化训练。我们数字化了顶级语学院的核心教材，让您即使不在韩国，也能紧跟课堂进度，体验最正统的韩语教育。",
-    "card2Title": "TOPIK 考级神助攻",
-    "card2Desc": "提供历年真题模拟与智能错题分析，助你轻松拿下 6 级，申请名校奖学金。",
-    "card2List": [
-      "全真模拟考场",
-      "自动评分系统",
-      "名校奖学金标准",
-      "历年真题库"
-    ],
-    "card3Title": "原声听力磨耳朵",
-    "card3Desc": "语学院课堂原声重现，支持逐句精听与倍速播放，提前适应全韩语教学环境。",
-    "card4Title": "自学进度管家",
-    "card4Desc": "自动记录学习轨迹，科学规划复习。无论是自学党还是留学生，都能高效管理进度。",
-    "stepTitle": "三步开启学霸模式",
-    "step1Title": "选择目标教材",
-    "step1Desc": "根据你所在的语学院或自学目标，选择延世、西江等对应教材。",
-    "step2Title": "同步跟读与练习",
-    "step2Desc": "课前预习单词，课后利用 AI 辅助巩固语法与听力。",
-    "step3Title": "无缝对接韩国课堂",
-    "step3Desc": "告别听不懂、跟不上的困扰，自信参与课堂互动。",
-    "ctaTitle": "准备好开启留学/自学之旅了吗？",
-    "ctaDesc": "读韩 (DuHan) 陪伴你从四十音到精通的每一步。现在加入，体验最地道的韩语教学资源。",
     "ctaBtn": "免费注册账号",
     "ctaNote": "无需信用卡 · 免费版永久有效",
     "footerDesc": "您全面的韩语学习平台",
