--- a/locales/mn.json
+++ b/locales/mn.json
@@ -437,6 +437,23 @@
       "mistakes_desc": "Review Weakness"
     }
   },
+  "plan": {
+    "monthly": "Сарын эрх",
+    "annual": "Жилийн эрх",
+    "lifetime": "Насан туршийн эрх"
+  },
+  "period": {
+    "per_month": "/ сар",
+    "per_year": "/ жил",
+    "once": "нэг удаа"
+  },
+  "feature": {
+    "textbook_access": "Сурах бичиг бүрэн хандах",
+    "topik_access": "Хязгааргүй TOPIK шалгалт"
+  },
+  "button": {
+    "upgrade": "Одоо шинэчлэх"
+  },
   "landing": {
     "heroBadge": "Yonsei, Sogang, SNU сурах бичиг шинэчлэгдэж байна",
     "heroTitle1": "Master Korean,",
@@ -449,7 +466,7 @@
     "statPassRate": "TOPIK 6 тэнцэлт",
     "statRecommend": "Сурагчийн санал",
     "featureEyebrow": "Сургалтын туслах",
-    "featureTitle": "Зөвхөн сурах бичиг биш, таны AI багш",
+    "featureTitle": "Зөвхөн сурах бичиг биш, таны Ухаалаг багш",
     "card1Title": "Их сургуулийн хөтөлбөр",
     "card1Desc": "Yonsei, Sogang-ийн сурах бичгүүдийг цахимжуулсан. Солонгост байхгүй ч ангийнхантайгаа зэрэгцэн суралцаарай.",
     "card2Title": "TOPIK-ийн эзэн",
@@ -468,7 +485,7 @@
     "step1Title": "Сурах бичиг сонгох",
     "step1Desc": "Зорилго эсвэл сургуульдаа тохируулан Yonsei, Sogang зэргийг сонгоно уу.",
     "step2Title": "Дасгал & Синхрончлол",
-    "step2Desc": "Шинэ үгсийг урьдчилан харж, дүрмийг AI тусламжтайгаар бататгаарай.",
+    "step2Desc": "Шинэ үг, эхийг урьдчилан судалж, шинэ мэдлэг эзэмшээрэй.",
     "step3Title": "Ангид бэлэн",
     "step3Desc": "Ойлгохгүй байх айдсаа мартаж, хичээлдээ итгэлтэй оролцоорой.",
     "ctaTitle": "Аялалаа эхлүүлэхэд бэлэн үү?",
@@ -477,9 +494,34 @@
     "ctaNote": "Картын мэдээлэл шаардлагагүй · Үүрд үнэгүй",
     "footerDesc": "Таны иж бүрэн Солонгос хэлний сургалтын платформ",
     "contactUs": "Холбоо барих",
+    "contactConfirm": "Та support@koreanstudy.me хаяг руу имэйл илгээх үү?",
     "privacy": "Нууцлалын бодлого",
     "term": "Үйлчилгээний нөхцөл",
     "refundPolicy": "Төлбөрийн бодлого",
     "legal": "Хууль эрх зүй"
+  },
+  "pricing": {
+    "limitedOffer": "Хязгаарлагдмал санал",
+    "paymentMethods": "Бид WeChat Pay болон Alipay хүлээн авдаг",
+    "notSure": "Та аль багц тохирохыг мэдэхгүй байна уу?",
+    "trial": "7 хоног үнэгүй турших",
+    "discount": "70% ХЯМДРАЛ",
+    "title": "Солонгос хэлээ сайжруулахад хөрөнгө оруулаарай",
+    "subtitle": "Өөрийн хурдад тохирсон багцаа сонгоорой.",
+    "features": {
+      "monthly": {
+        "cloudSync": "Тэмдэглэл үүлэн синк"
+      },
+      "annual": {
+        "allMonthly": "Сарын багцын бүх боломжууд",
+        "bestValue": "Тууштай суралцагчдад хамгийн ашигтай",
+        "prioritySupport": "Тэргүүн ээлжийн дэмжлэг"
+      },
+      "lifetime": {
+        "oneTime": "Нэг удаагийн төлбөр",
+        "foreverAccess": "Бүх зүйлд үүрд хандах эрх",
+        "futureUpdates": "Ирээдүйн шинэчлэлтүүд багтсан"
+      }
+    }
   }
 }
