--- a/locales/zh.json
+++ b/locales/zh.json
@@ -441,6 +441,23 @@
       "mistakes_desc": "查漏补缺"
     }
   },
+  "plan": {
+    "monthly": "月度会员",
+    "annual": "年度会员",
+    "lifetime": "终身会员"
+  },
+  "period": {
+    "per_month": "/ 月",
+    "per_year": "/ 年",
+    "once": "一次性"
+  },
+  "feature": {
+    "textbook_access": "解锁所有教科书",
+    "topik_access": "无限 TOPIK 模考"
+  },
+  "button": {
+    "upgrade": "立即升级"
+  },
   "landing": {
     "heroBadge": "延世、西江、首尔大教材持续更新中",
     "heroTitle1": "精通韩语，",
@@ -454,7 +471,7 @@
     "statPassRate": "高通过率",
     "statRecommend": "学员推荐",
     "featureEyebrow": "学习助手",
-    "featureTitle": "不仅是教材，更是您的 AI 导师",
+    "featureTitle": "不仅是教材，更是您的智能导师",
     "featureDesc": "我们将最优秀的韩语教材数字化，并添加了即使翻译、间隔重复复习和发音反馈等智能功能。",
     "card1Title": "大学正规课程",
     "card1Desc": "数字化延世、西江等大学教材。即使不在韩国，也能与课堂进度保持同步。",
@@ -474,7 +491,7 @@
     "step1Title": "选择教材",
     "step1Desc": "根据目标或学校选择延世、西江等权威教材。",
     "step2Title": "练习与同步",
-    "step2Desc": "预习生词，通过 AI 巩固语法点。",
+    "step2Desc": "预习生词与课文，掌握新知识。",
     "step3Title": "自信上课",
     "step3Desc": "通过预习消除听不懂的恐惧，自信参与课堂互动。",
     "ctaTitle": "准备好开始了吗？",
@@ -483,9 +500,34 @@
     "ctaNote": "无需信用卡 · 免费版永久有效",
     "footerDesc": "您全面的韩语学习平台",
     "contactUs": "联系我们",
+    "contactConfirm": "您确定要向 support@koreanstudy.me 发送邮件吗？",
     "privacy": "隐私政策",
     "term": "服务条款",
     "refundPolicy": "退款政策",
     "legal": "法律声明"
+  },
+  "pricing": {
+    "limitedOffer": "限时优惠",
+    "paymentMethods": "支持微信支付和支付宝",
+    "notSure": "不确定哪个计划适合您？",
+    "trial": "开始 7 天免费试用",
+    "discount": "70% OFF",
+    "title": "为您的韩语流利度投资",
+    "subtitle": "选择适合您进度的计划。",
+    "features": {
+      "monthly": {
+        "cloudSync": "云端笔记同步"
+      },
+      "annual": {
+        "allMonthly": "包含所有月度会员功能",
+        "bestValue": "最适合认真学习者",
+        "prioritySupport": "优先客户支持"
+      },
+      "lifetime": {
+        "oneTime": "一次性付费",
+        "foreverAccess": "永久解锁所有内容",
+        "futureUpdates": "包含未来更新"
+      }
+    }
   }
 }
