feat: add notebook navigation to sidebar and dashboard quick access

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -3,6 +3,7 @@
   "dashboard": "教材学习",
   "textbookLearning": "教材学习",
   "topik": "TOPIK 备考",
+  "notebook": "我的笔记",
   "profile": "个人资料",
   "admin": "管理后台",
   "signOut": "退出登录",
