--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
   "dashboard": "Textbooks",
   "textbookLearning": "Textbook Learning",
   "topik": "TOPIK Prep",
+  "notebook": "My Notebook",
   "profile": "Profile",
   "admin": "Admin Console",
   "signOut": "Sign Out",
